--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Forest</string>
+    <string name="setting">设置</string>
+    <string name="main_page">主页面</string>
 </resources>
