--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Forest</string>
     <string name="setting">设置</string>
     <string name="main_page">主页面</string>
+    <string name="minute">分钟</string>
+    <string name="cancel">取消</string>
 </resources>
