--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="main_page">主页面</string>
     <string name="minute">分钟</string>
     <string name="cancel">取消</string>
+    <string name="accessibility_service_description">这个辅助功能是为了检测屏幕变化，不会收集不必要的数据</string>
 </resources>
