--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="please_input_pwd">密码</string>
     <string name="please_input_pwd2">确认密码</string>
     <string name="please_input_name">昵称</string>
+    <string name="pwd_not_same">两次输入的密码不一致</string>
 </resources>
