--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="please_input_pwd2">确认密码</string>
     <string name="please_input_name">昵称</string>
     <string name="pwd_not_same">两次输入的密码不一致</string>
+    <string name="please_select_head">请选择头像</string>
 </resources>
