--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,6 @@
     <string name="pwd_not_same">两次输入的密码不一致</string>
     <string name="please_select_head">请选择头像</string>
     <string name="school_timetables">课程表</string>
-    <string name="user_info">用户信息</string>
+    <string name="user_info">个人信息</string>
+    <string name="confirm">确认</string>
 </resources>
